--- a/contacts.html
+++ b/contacts.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contacts</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4215298289"/>
-  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=463229091" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=325486333"/>
+  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=200501573" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -40,6 +40,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718"><!-- horizontal box -->
         <img class="MenuItemLabel NoWrap grpelem" id="u37719" alt="3D Печать" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
        </div>
+       <div class="SubMenu MenuLevel1 clearfix" id="u37716"><!-- vertical box -->
+        <ul class="SubMenuView clearfix colelem" id="u37717"><!-- vertical box -->
+         <li class="MenuItemContainer clearfix colelem" id="u39577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39579"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39583-4"><!-- content --><p>Расчет стоимости печати</p></div></div></li>
+        </ul>
+       </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="gallery.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -52,7 +57,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="MenuItemContainer clearfix grpelem" id="u1515"><!-- vertical box -->
        <div class="MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518"><!-- horizontal box -->
         <div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images -->
-         <img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/>
+         <img alt="Тут не могла быть реклама" src="images/blank.gif?crc=4208392903"/>
          <div class="fluid_height_spacer"></div>
         </div>
        </div>
@@ -60,15 +65,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </nav>
      <img class="grpelem" id="u39247-4" alt="3D" width="92" height="131" src="images/u39247-4.png?crc=116229440"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" width="146" height="115" src="images/u39250-6.png?crc=130563105"/><!-- rasterized frame -->
-     <img class="grpelem" id="u39253-4" alt="В ПИНСКЕ" width="356" height="128" src="images/u39253-4.png?crc=368077745"/><!-- rasterized frame -->
+     <img class="grpelem" id="u39253-4" alt="Krista.Konstanin" width="688" height="131" src="images/u39253-4.png?crc=202356479"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem" id="pu39083-4"><!-- group -->
      <img class="grpelem" id="u39083-4" alt="E-mail" width="84" height="44" src="images/u39083-4.png?crc=4283756679"/><!-- rasterized frame -->
      <img class="grpelem" id="u39185-4" alt="konstantin.krista@gmail.com" width="322" height="44" src="images/u39185-4.png?crc=155163712"/><!-- rasterized frame -->
     </div>
-    <div class="clearfix colelem" id="ppu39176"><!-- group -->
-     <a class="nonblock nontext grpelem" id="u39176" href="https://www.youtube.com/channel/UCQ_Ysijih8xW-ipolDhyJiQ" target="_blank"><!-- state-based BG images --></a>
-     <a class="nonblock nontext grpelem" id="u39179" href="https://vk.com/goganihe"><!-- state-based BG images --></a>
+    <div class="clearfix colelem" id="pu39176-3"><!-- group -->
+     <div class="grpelem" id="u39176-3"><!-- rasterized frame --></div>
+     <div class="grpelem" id="u39179-3"><!-- rasterized frame --></div>
      <a class="nonblock nontext clearfix grpelem" id="u39197-4" href="https://vk.com/krista.konstantin" target="_blank"><!-- content --><p>+</p></a>
      <div class="clearfix grpelem" id="u39203-4"><!-- content -->
       <p>+</p>
@@ -76,8 +81,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <img class="grpelem" id="u39233-4" alt="BK" width="84" height="44" src="images/u39233-4.png?crc=4264108762"/><!-- rasterized frame -->
      <img class="grpelem" id="u39239-4" alt="YouTube" width="84" height="44" src="images/u39239-4.png?crc=534707832"/><!-- rasterized frame -->
      <img class="grpelem" id="u39265-4" alt="thingiverse.com" width="156" height="44" src="images/u39265-4.png?crc=473371155"/><!-- rasterized frame -->
-     <a class="nonblock nontext grpelem" id="u39268" href="https://www.youtube.com/channel/UCQ_Ysijih8xW-ipolDhyJiQ" target="_blank"><!-- state-based BG images --></a>
-     <a class="nonblock nontext grpelem" id="u39271" href="https://www.youtube.com/channel/UCQ_Ysijih8xW-ipolDhyJiQ" target="_blank"><!-- state-based BG images --></a>
+     <div class="transition grpelem" id="u39268"><!-- state-based BG images --></div>
+     <div class="grpelem" id="u39271-3"><!-- rasterized frame --></div>
      <img class="grpelem" id="u39274-4" alt="telegram" width="107" height="44" src="images/u39274-4.png?crc=4180632695"/><!-- rasterized frame -->
      <a class="nonblock nontext clearfix grpelem" id="u39277-4" href="https://www.thingiverse.com/krista_konstantin/designs" target="_blank"><!-- content --><p>+</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u39280-4" href="https://t.me/Krista_Konstantin" target="_blank"><!-- content --><p>+</p></a>
@@ -86,20 +91,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=3971789501" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3816701113" alt=""/>
-   <img class="preload" src="images/u37719-r.png?crc=3936411878" alt=""/>
-   <img class="preload" src="images/u37719-a.png?crc=4214308391" alt=""/>
-   <img class="preload" src="images/u1060-r.png?crc=444531456" alt=""/>
-   <img class="preload" src="images/u1060-a.png?crc=282890817" alt=""/>
-   <img class="preload" src="images/u39211-r.png?crc=187862083" alt=""/>
-   <img class="preload" src="images/u39211-a.png?crc=4239729737" alt=""/>
-   <img class="preload" src="images/u1521-r.png?crc=484164113" alt=""/>
-   <img class="preload" src="images/u1521-a.png?crc=330121899" alt=""/>
-   <img class="preload" src="images/u39176-r.png?crc=441129514" alt=""/>
-   <img class="preload" src="images/u39179-r.png?crc=425754536" alt=""/>
-   <img class="preload" src="images/u39268-r.png?crc=4231036866" alt=""/>
-   <img class="preload" src="images/u39271-r.png?crc=4226705525" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=4241377526" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=419764504" alt=""/>
+   <img class="preload" src="images/u37719-r.png?crc=3913143181" alt=""/>
+   <img class="preload" src="images/u37719-a.png?crc=4069526000" alt=""/>
+   <img class="preload" src="images/u1060-r.png?crc=59733261" alt=""/>
+   <img class="preload" src="images/u1060-a.png?crc=285188805" alt=""/>
+   <img class="preload" src="images/u39211-r.png?crc=3987860149" alt=""/>
+   <img class="preload" src="images/u39211-a.png?crc=101900245" alt=""/>
+   <img class="preload" src="images/u1521-r.png?crc=3769757086" alt=""/>
+   <img class="preload" src="images/u1521-a.png?crc=4169524434" alt=""/>
+   <img class="preload" src="images/u39268-r.png?crc=324754347" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
