--- a/gallery.html
+++ b/gallery.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Gallery</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4215298289"/>
-  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=384014127" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=325486333"/>
+  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=3892233053" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -47,6 +47,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box -->
         <img class="MenuItemLabel NoWrap grpelem" id="u37719" alt="3D Печать" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
        </div>
+       <div class="SubMenu MenuLevel1 clearfix" id="u37716"><!-- vertical box -->
+        <ul class="SubMenuView clearfix colelem" id="u37717"><!-- vertical box -->
+         <li class="MenuItemContainer clearfix colelem" id="u39577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39579"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39583-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Расчет стоимости печати</p></div></div></li>
+        </ul>
+       </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1057" href="gallery.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -59,7 +64,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="MenuItemContainer clearfix grpelem" id="u1515"><!-- vertical box -->
        <div class="MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518"><!-- horizontal box -->
         <div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images -->
-         <img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/>
+         <img alt="Тут не могла быть реклама" src="images/blank.gif?crc=4208392903"/>
          <div class="fluid_height_spacer"></div>
         </div>
        </div>
@@ -67,55 +72,51 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </nav>
      <img class="grpelem" id="u39247-4" alt="3D" src="images/u39247-4.png?crc=116229440" data-image-width="92"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" src="images/u39250-6.png?crc=130563105" data-image-width="146"/><!-- rasterized frame -->
-     <img class="grpelem" id="u39253-4" alt="В ПИНСКЕ" src="images/u39253-4.png?crc=368077745" data-image-width="356"/><!-- rasterized frame -->
+     <img class="grpelem" id="u39253-4" alt="Krista.Konstanin" src="images/u39253-4.png?crc=202356479" data-image-width="688"/><!-- rasterized frame -->
     </div>
-    <div class="clearfix colelem" id="pu39289"><!-- group -->
-     <div class="grpelem" id="u39289"><!-- simple frame --></div>
+    <div class="clearfix colelem" id="pu39525"><!-- group -->
+     <div class="grpelem" id="u39525"><!-- content -->
+      <div class="fluid_height_spacer"></div>
+     </div>
      <a class="nonblock nontext grpelem" id="u39286" href="https://www.thingiverse.com/krista_konstantin/designs"><!-- state-based BG images --><div id="u39286_states"><img alt="Профиль на hingiverse.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
     </div>
-    <div class="clearfix colelem" id="pu38420"><!-- group -->
-     <div class="grpelem" id="u38420"><!-- content -->
-      <div class="fluid_height_spacer"></div>
-     </div>
-     <div class="grpelem" id="u38421"><!-- content -->
-      <div class="fluid_height_spacer"></div>
-     </div>
-     <nav class="MenuBar clearfix grpelem" id="menuu38422" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- horizontal box -->
-      <div class="MenuItemContainer clearfix grpelem" id="u38423"><!-- vertical box -->
-       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u38424" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box -->
-        <img class="MenuItemLabel NoWrap grpelem" id="u38425" alt="Подробнее" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
+    <div class="clearfix colelem" id="u39445"><!-- group -->
+     <img class="grpelem" id="u38432-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u38432-4.png?crc=221310515" data-image-width="146"/><!-- rasterized frame -->
+     <div class="clearfix grpelem" id="u39442"><!-- group -->
+      <div class="clearfix grpelem" id="pu38420"><!-- group -->
+       <div class="grpelem" id="u38420" data-sizePolicy="fluidWidthHeight" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu38420"><!-- content -->
+        <div class="fluid_height_spacer"></div>
+       </div>
+       <div class="grpelem" id="u38421" data-sizePolicy="fluidWidthHeight" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu38420"><!-- content -->
+        <div class="fluid_height_spacer"></div>
+       </div>
+       <div class="clip_frame grpelem" id="u38430" data-sizePolicy="fluidWidthHeight" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu38420"><!-- image -->
+        <img class="block" id="u38430_img" src="images/image_2021-01-11_04-10-09-crop-u38430.jpg?crc=91848361" alt="" data-heightwidthratio="0.4251824817518248" data-image-width="548" data-image-height="233"/>
+       </div>
+       <div class="grpelem" id="u38434"><!-- state-based BG images -->
+        <img alt="Вывеска для &quot;ноготочек&quot;" src="images/blank.gif?crc=4208392903"/>
+        <div class="fluid_height_spacer"></div>
        </div>
       </div>
-     </nav>
-     <div class="clip_frame grpelem" id="u38430"><!-- image -->
-      <img class="block" id="u38430_img" src="images/untitled_by_elgama-d5hhapn-crop-u38430.jpg?crc=4141765436" alt="" data-heightwidthratio="0.4251824817518248" data-image-width="548" data-image-height="233"/>
-     </div>
-     <img class="grpelem" id="u38432-4" alt="goganihe дд-мм-гг, чч:мм" src="images/u38432-4.png?crc=221310515" data-image-width="146"/><!-- rasterized frame -->
-     <img class="grpelem" id="u38433-4" alt="Множество талантливых разработчиков игр приняли участие в своеобразном опросе, где поведали о том, как они придумывали названия для своих игр. Инициатором диалога стал основатель независимой компании No More Robots Майк Роуз. Его сообщение в Twitter привлекло инди-девелоперов со всего мира. Каждый из них захотел поделиться интересными (и не очень) историями, связанными с непростым процессом нейминга игры." src="images/u38433-4.png?crc=4139330446" data-image-width="274"/><!-- rasterized frame -->
-     <div class="grpelem" id="u38434"><!-- state-based BG images -->
-      <img alt="Заголовок" src="images/blank.gif?crc=4208392903"/>
-      <div class="fluid_height_spacer"></div>
+      <img class="grpelem" id="u38433-4" alt="КАК ЖЕ Я ЗАЕБАЛСЯ ЭТО ДЕЛАТЬ" src="images/u38433-4.png?crc=4148584597" data-image-width="274"/><!-- rasterized frame -->
      </div>
     </div>
-    <a class="nonblock nontext pinned-colelem" id="u39230" href="addnews.html" target="_blank"><!-- state-based BG images --><div id="u39230_states"><img alt="+" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
-    <div class="verticalspacer" data-offset-top="592" data-content-above-spacer="591" data-content-below-spacer="59" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="604" data-content-above-spacer="603" data-content-below-spacer="80" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=3971789501" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3816701113" alt=""/>
-   <img class="preload" src="images/u37719-r.png?crc=3936411878" alt=""/>
-   <img class="preload" src="images/u37719-a.png?crc=4214308391" alt=""/>
-   <img class="preload" src="images/u1060-r.png?crc=444531456" alt=""/>
-   <img class="preload" src="images/u1060-a.png?crc=282890817" alt=""/>
-   <img class="preload" src="images/u39211-r.png?crc=187862083" alt=""/>
-   <img class="preload" src="images/u39211-a.png?crc=4239729737" alt=""/>
-   <img class="preload" src="images/u1521-r.png?crc=484164113" alt=""/>
-   <img class="preload" src="images/u1521-a.png?crc=330121899" alt=""/>
-   <img class="preload" src="images/u39286_states-r.png?crc=4292012625" alt=""/>
-   <img class="preload" src="images/u38425-r.png?crc=3777811593" alt=""/>
-   <img class="preload" src="images/u38434-r.png?crc=355228694" alt=""/>
-   <img class="preload" src="images/u39230_states-r.png?crc=4245954757" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=4241377526" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=419764504" alt=""/>
+   <img class="preload" src="images/u37719-r.png?crc=3913143181" alt=""/>
+   <img class="preload" src="images/u37719-a.png?crc=4069526000" alt=""/>
+   <img class="preload" src="images/u1060-r.png?crc=59733261" alt=""/>
+   <img class="preload" src="images/u1060-a.png?crc=285188805" alt=""/>
+   <img class="preload" src="images/u39211-r.png?crc=3987860149" alt=""/>
+   <img class="preload" src="images/u39211-a.png?crc=101900245" alt=""/>
+   <img class="preload" src="images/u1521-r.png?crc=3769757086" alt=""/>
+   <img class="preload" src="images/u1521-a.png?crc=4169524434" alt=""/>
+   <img class="preload" src="images/u39286_states-r.png?crc=4186481028" alt=""/>
+   <img class="preload" src="images/u38434-r.png?crc=3761072987" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
