--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>News</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=4215298289"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4115503958" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=325486333"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4209186879" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -47,6 +47,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box -->
         <img class="MenuItemLabel NoWrap grpelem" id="u37719" alt="3D Печать" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
        </div>
+       <div class="SubMenu MenuLevel1 clearfix" id="u37716"><!-- vertical box -->
+        <ul class="SubMenuView clearfix colelem" id="u37717"><!-- vertical box -->
+         <li class="MenuItemContainer clearfix colelem" id="u39577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39579"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39583-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Расчет стоимости печати</p></div></div></li>
+        </ul>
+       </div>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="gallery.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
@@ -59,7 +64,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="MenuItemContainer clearfix grpelem" id="u1515"><!-- vertical box -->
        <div class="MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518"><!-- horizontal box -->
         <div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images -->
-         <img alt="ПОДДЕРЖАТЬ" src="images/blank.gif?crc=4208392903"/>
+         <img alt="Тут не могла быть реклама" src="images/blank.gif?crc=4208392903"/>
          <div class="fluid_height_spacer"></div>
         </div>
        </div>
@@ -67,7 +72,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </nav>
      <img class="grpelem" id="u39247-4" alt="3D" src="images/u39247-4.png?crc=116229440" data-image-width="92"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" src="images/u39250-6.png?crc=130563105" data-image-width="146"/><!-- rasterized frame -->
-     <img class="grpelem" id="u39253-4" alt="В ПИНСКЕ" src="images/u39253-4.png?crc=368077745" data-image-width="356"/><!-- rasterized frame -->
+     <img class="grpelem" id="u39253-4" alt="Krista.Konstanin" src="images/u39253-4.png?crc=202356479" data-image-width="688"/><!-- rasterized frame -->
     </div>
     <div class="SlideShowWidget clearfix colelem" id="slideshowu38498" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- none box -->
      <div class="popup_anchor" id="u38499popup">
@@ -149,7 +154,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="fluid_height_spacer"></div>
      </div>
     </div>
-    <a class="nonblock nontext pinned-colelem" id="u38864" href="addnews.html" target="_blank"><!-- state-based BG images --><div id="u38864_states"><img alt="+" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    </div>
    <div class="clearfix grpelem" id="pu35596"><!-- group -->
     <div id="u35596-wrapper">
@@ -159,14 +163,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="MenuItemContainer clearfix grpelem" id="u36158"><!-- vertical box -->
       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u36161"><!-- horizontal box -->
        <div class="MenuItemLabel NoWrap clearfix grpelem" id="u36163-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
-        <p>&lt;</p>
+        <p id="u36163-2">&lt;</p>
        </div>
       </div>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu36165"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36166"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u36167" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u36170-4"><!-- rasterized frame --><div id="u36170-4_clip"><img alt="1" width="10" height="36" src="images/u36170-4-a.png?crc=226493418"/></div></div></a>
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u36167" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u36170-4"><!-- rasterized frame --><div id="u36170-4_clip"><img alt="1" width="10" height="36" src="images/u36170-4-a.png?crc=4069740485"/></div></div></a>
      </div>
     </nav>
     <nav class="MenuBar clearfix" id="menuu36173"><!-- horizontal box -->
@@ -201,7 +205,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="MenuItemContainer clearfix grpelem" id="u36206"><!-- vertical box -->
       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u36209"><!-- horizontal box -->
        <div class="MenuItemLabel NoWrap clearfix grpelem" id="u36210-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content -->
-        <p>&gt;</p>
+        <p id="u36210-2">&gt;</p>
        </div>
       </div>
      </div>
@@ -218,32 +222,31 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="1231" data-content-above-spacer="10603" data-content-below-spacer="59" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1231" data-content-above-spacer="10603" data-content-below-spacer="80" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u1047-r.png?crc=3971789501" alt=""/>
-   <img class="preload" src="images/u1047-a.png?crc=3816701113" alt=""/>
-   <img class="preload" src="images/u37719-r.png?crc=3936411878" alt=""/>
-   <img class="preload" src="images/u37719-a.png?crc=4214308391" alt=""/>
-   <img class="preload" src="images/u1060-r.png?crc=444531456" alt=""/>
-   <img class="preload" src="images/u1060-a.png?crc=282890817" alt=""/>
-   <img class="preload" src="images/u39211-r.png?crc=187862083" alt=""/>
-   <img class="preload" src="images/u39211-a.png?crc=4239729737" alt=""/>
-   <img class="preload" src="images/u1521-r.png?crc=484164113" alt=""/>
-   <img class="preload" src="images/u1521-a.png?crc=330121899" alt=""/>
+   <img class="preload" src="images/u1047-r.png?crc=4241377526" alt=""/>
+   <img class="preload" src="images/u1047-a.png?crc=419764504" alt=""/>
+   <img class="preload" src="images/u37719-r.png?crc=3913143181" alt=""/>
+   <img class="preload" src="images/u37719-a.png?crc=4069526000" alt=""/>
+   <img class="preload" src="images/u1060-r.png?crc=59733261" alt=""/>
+   <img class="preload" src="images/u1060-a.png?crc=285188805" alt=""/>
+   <img class="preload" src="images/u39211-r.png?crc=3987860149" alt=""/>
+   <img class="preload" src="images/u39211-a.png?crc=101900245" alt=""/>
+   <img class="preload" src="images/u1521-r.png?crc=3769757086" alt=""/>
+   <img class="preload" src="images/u1521-a.png?crc=4169524434" alt=""/>
    <img class="preload" src="images/u39298-r.png?crc=3777811593" alt=""/>
    <img class="preload" src="images/u39306-r.png?crc=355228694" alt=""/>
    <img class="preload" src="images/u39390-r.png?crc=3777811593" alt=""/>
    <img class="preload" src="images/u39398-r.png?crc=355228694" alt=""/>
-   <img class="preload" src="images/u38864_states-r.png?crc=4245954757" alt=""/>
-   <img class="preload" src="images/u36180-r.png?crc=4101855078" alt=""/>
-   <img class="preload" src="images/u36180-a.png?crc=4101855078" alt=""/>
-   <img class="preload" src="images/u36188-r.png?crc=137824854" alt=""/>
-   <img class="preload" src="images/u36188-a.png?crc=137824854" alt=""/>
-   <img class="preload" src="images/u36192-r.png?crc=191409688" alt=""/>
-   <img class="preload" src="images/u36192-a.png?crc=191409688" alt=""/>
-   <img class="preload" src="images/u36203-r.png?crc=4201153683" alt=""/>
-   <img class="preload" src="images/u36203-a.png?crc=4201153683" alt=""/>
+   <img class="preload" src="images/u36180-r.png?crc=420458225" alt=""/>
+   <img class="preload" src="images/u36180-a.png?crc=420458225" alt=""/>
+   <img class="preload" src="images/u36188-r.png?crc=3956605029" alt=""/>
+   <img class="preload" src="images/u36188-a.png?crc=3956605029" alt=""/>
+   <img class="preload" src="images/u36192-r.png?crc=186579675" alt=""/>
+   <img class="preload" src="images/u36192-a.png?crc=186579675" alt=""/>
+   <img class="preload" src="images/u36203-r.png?crc=4188109998" alt=""/>
+   <img class="preload" src="images/u36203-a.png?crc=4188109998" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
