--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>News</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=325486333"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4209186879" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=140651097"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4257890866" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -50,6 +50,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="SubMenu MenuLevel1 clearfix" id="u37716"><!-- vertical box -->
         <ul class="SubMenuView clearfix colelem" id="u37717"><!-- vertical box -->
          <li class="MenuItemContainer clearfix colelem" id="u39577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39579"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39583-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Расчет стоимости печати</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u39643"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39646"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39649-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>ту</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u39622"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39625"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39628-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>ту</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u39601"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39604"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39607-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>ру</p></div></div></li>
         </ul>
        </div>
       </div>
@@ -159,6 +162,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div id="u35596-wrapper">
      <a class="nonblock nontext anim_swing" id="u35596" href="index.html#werh"><!-- simple frame --></a>
     </div>
+    <div id="u35613-4-wrapper">
+     <div class="clearfix" id="u35613-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+      <p>^</p>
+     </div>
+    </div>
     <nav class="MenuBar clearfix" id="menuu36157"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u36158"><!-- vertical box -->
       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u36161"><!-- horizontal box -->
@@ -212,17 +220,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </nav>
    </div>
    <a class="anchor_item grpelem" id="werh" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></a>
-   <div class="clearfix grpelem" id="pu35655-4"><!-- group -->
-    <div id="u35655-4-wrapper">
-     <img id="u35655-4" alt="Наверх" src="images/u35655-4.png?crc=3933298384" data-image-width="96"/><!-- rasterized frame -->
-    </div>
-    <div id="u35613-4-wrapper">
-     <div class="clearfix" id="u35613-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-      <p>^</p>
-     </div>
-    </div>
+   <div id="u35655-4-wrapper">
+    <img id="u35655-4" alt="Наверх" src="images/u35655-4.png?crc=3933298384" data-image-width="96"/><!-- rasterized frame -->
    </div>
-   <div class="verticalspacer" data-offset-top="1231" data-content-above-spacer="10603" data-content-below-spacer="80" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1230" data-content-above-spacer="10601" data-content-below-spacer="80" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=4241377526" alt=""/>
