--- a/contacts.html
+++ b/contacts.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contacts</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=325486333"/>
-  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=200501573" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=140651097"/>
+  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=406513134" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -43,6 +43,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="SubMenu MenuLevel1 clearfix" id="u37716"><!-- vertical box -->
         <ul class="SubMenuView clearfix colelem" id="u37717"><!-- vertical box -->
          <li class="MenuItemContainer clearfix colelem" id="u39577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39579"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39583-4"><!-- content --><p>Расчет стоимости печати</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u39643"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39646"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39649-4"><!-- content --><p>ту</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u39622"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39625"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39628-4"><!-- content --><p>ту</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u39601"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39604"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39607-4"><!-- content --><p>ру</p></div></div></li>
         </ul>
        </div>
       </div>
@@ -69,7 +72,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="pu39083-4"><!-- group -->
      <img class="grpelem" id="u39083-4" alt="E-mail" width="84" height="44" src="images/u39083-4.png?crc=4283756679"/><!-- rasterized frame -->
-     <img class="grpelem" id="u39185-4" alt="konstantin.krista@gmail.com" width="322" height="44" src="images/u39185-4.png?crc=155163712"/><!-- rasterized frame -->
+     <a class="nonblock nontext grpelem" id="u39185" href="mailto:konstantin.krista@gmail.com"><!-- state-based BG images --><img id="u39185_states" alt="konstantin.krista@gmail.com" src="images/blank.gif?crc=4208392903"/></a>
     </div>
     <div class="clearfix colelem" id="pu39176-3"><!-- group -->
      <div class="grpelem" id="u39176-3"><!-- rasterized frame --></div>
@@ -87,7 +90,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u39277-4" href="https://www.thingiverse.com/krista_konstantin/designs" target="_blank"><!-- content --><p>+</p></a>
      <a class="nonblock nontext clearfix grpelem" id="u39280-4" href="https://t.me/Krista_Konstantin" target="_blank"><!-- content --><p>+</p></a>
     </div>
-    <div class="verticalspacer" data-offset-top="365" data-content-above-spacer="365" data-content-below-spacer="134"></div>
+    <div class="verticalspacer" data-offset-top="326" data-content-above-spacer="326" data-content-below-spacer="173"></div>
    </div>
   </div>
   <div class="preload_images">
@@ -101,6 +104,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u39211-a.png?crc=101900245" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=3769757086" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=4169524434" alt=""/>
+   <img class="preload" src="images/u39185_states-r.png?crc=3998648358" alt=""/>
    <img class="preload" src="images/u39268-r.png?crc=324754347" alt=""/>
   </div>
   <!-- Other scripts -->
