--- a/gallery.html
+++ b/gallery.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Gallery</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=325486333"/>
-  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=3892233053" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=140651097"/>
+  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=309395688" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -50,6 +50,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="SubMenu MenuLevel1 clearfix" id="u37716"><!-- vertical box -->
         <ul class="SubMenuView clearfix colelem" id="u37717"><!-- vertical box -->
          <li class="MenuItemContainer clearfix colelem" id="u39577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39579"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39583-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Расчет стоимости печати</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u39643"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39646"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39649-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>ту</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u39622"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39625"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39628-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>ту</p></div></div></li>
+         <li class="MenuItemContainer clearfix colelem" id="u39601"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39604"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39607-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>ру</p></div></div></li>
         </ul>
        </div>
       </div>
@@ -101,7 +104,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="grpelem" id="u38433-4" alt="КАК ЖЕ Я ЗАЕБАЛСЯ ЭТО ДЕЛАТЬ" src="images/u38433-4.png?crc=4148584597" data-image-width="274"/><!-- rasterized frame -->
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="604" data-content-above-spacer="603" data-content-below-spacer="80" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="605" data-content-above-spacer="604" data-content-below-spacer="80" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
   </div>
   <div class="preload_images">
@@ -115,7 +118,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u39211-a.png?crc=101900245" alt=""/>
    <img class="preload" src="images/u1521-r.png?crc=3769757086" alt=""/>
    <img class="preload" src="images/u1521-a.png?crc=4169524434" alt=""/>
-   <img class="preload" src="images/u39286_states-r.png?crc=4186481028" alt=""/>
+   <img class="preload" src="images/u39286_states-r.png?crc=307132591" alt=""/>
    <img class="preload" src="images/u38434-r.png?crc=3761072987" alt=""/>
   </div>
   <!-- Other scripts -->
