--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Gallery</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=140651097"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3773148606"/>
   <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=309395688" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -41,7 +41,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="Главная" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="news.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="Главная" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u37715"><!-- vertical box -->
        <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box -->
@@ -75,7 +75,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </nav>
      <img class="grpelem" id="u39247-4" alt="3D" src="images/u39247-4.png?crc=116229440" data-image-width="92"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" src="images/u39250-6.png?crc=130563105" data-image-width="146"/><!-- rasterized frame -->
-     <img class="grpelem" id="u39253-4" alt="Krista.Konstanin" src="images/u39253-4.png?crc=202356479" data-image-width="688"/><!-- rasterized frame -->
+     <img class="grpelem" id="u39253-4" alt="Krista.Konstantin" src="images/u39253-4.png?crc=267931284" data-image-width="688"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem" id="pu39525"><!-- group -->
      <div class="grpelem" id="u39525"><!-- content -->
@@ -101,7 +101,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="fluid_height_spacer"></div>
        </div>
       </div>
-      <img class="grpelem" id="u38433-4" alt="КАК ЖЕ Я ЗАЕБАЛСЯ ЭТО ДЕЛАТЬ" src="images/u38433-4.png?crc=4148584597" data-image-width="274"/><!-- rasterized frame -->
+      <img class="grpelem" id="u38433-4" alt="ту ту ру" src="images/u38433-4.png?crc=452678863" data-image-width="274"/><!-- rasterized frame -->
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="605" data-content-above-spacer="604" data-content-below-spacer="80" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
