--- a/contacts.html
+++ b/contacts.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contacts</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=140651097"/>
-  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=406513134" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3773148606"/>
+  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=292691811" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -34,7 +34,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u1026"><!-- content --></div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="Главная" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="news.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="Главная" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u37715"><!-- vertical box -->
        <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718"><!-- horizontal box -->
@@ -68,7 +68,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </nav>
      <img class="grpelem" id="u39247-4" alt="3D" width="92" height="131" src="images/u39247-4.png?crc=116229440"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" width="146" height="115" src="images/u39250-6.png?crc=130563105"/><!-- rasterized frame -->
-     <img class="grpelem" id="u39253-4" alt="Krista.Konstanin" width="688" height="131" src="images/u39253-4.png?crc=202356479"/><!-- rasterized frame -->
+     <img class="grpelem" id="u39253-4" alt="Krista.Konstantin" width="688" height="131" src="images/u39253-4.png?crc=267931284"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem" id="pu39083-4"><!-- group -->
      <img class="grpelem" id="u39083-4" alt="E-mail" width="84" height="44" src="images/u39083-4.png?crc=4283756679"/><!-- rasterized frame -->
