--- a/index.html
+++ b/index.html
@@ -17,21 +17,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Без имени 5</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4124389403" id="pagesheet"/>
-  <!-- JS includes -->
-  <!--[if lt IE 9]>
-  <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
-  <![endif]-->
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3902691815" id="pagesheet"/>
    </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- column -->
-   <div class="position_content" id="page_position_content">
-    <div class="clip_frame colelem" id="u39719"><!-- image -->
-     <img class="block" id="u39719_img" src="images/%d0%b2%d1%81%d1%82%d0%b0%d0%b2%d0%bb%d0%b5%d0%bd%d0%bd%d0%be%d0%b5%20%d0%b8%d0%b7%d0%be%d0%b1%d1%80%d0%b0%d0%b6%d0%b5%d0%bd%d0%b8%d0%b5%201280x853.jpg?crc=319449798" alt="" width="998" height="665"/>
-    </div>
-    <div class="verticalspacer" data-offset-top="667" data-content-above-spacer="666" data-content-below-spacer="0"></div>
+  <div class="clearfix" id="page"><!-- group -->
+   <div class="clip_frame grpelem" id="u39719"><!-- image -->
+    <img class="block" id="u39719_img" src="images/%d0%b2%d1%81%d1%82%d0%b0%d0%b2%d0%bb%d0%b5%d0%bd%d0%bd%d0%be%d0%b5%20%d0%b8%d0%b7%d0%be%d0%b1%d1%80%d0%b0%d0%b6%d0%b5%d0%bd%d0%b8%d0%b5%201280x853.jpg?crc=319449798" alt="" width="998" height="665"/>
    </div>
+   <a class="nonblock nontext clearfix grpelem" id="u39732-4" href="https://vk.com/krista.konstantin"><!-- content --><p>КНОПКА</p></a>
+   <div class="verticalspacer" data-offset-top="667" data-content-above-spacer="666" data-content-below-spacer="0"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
