--- a/gallery.html
+++ b/gallery.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Gallery</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3773148606"/>
-  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=309395688" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3981835437"/>
+  <link rel="stylesheet" type="text/css" href="css/gallery.css?crc=4046053713" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -29,53 +29,29 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix borderbox" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
-    <div class="clearfix colelem" id="pu2056"><!-- group -->
-     <div class="grpelem" id="u2056"><!-- content -->
-      <div class="fluid_height_spacer"></div>
-     </div>
+    <div class="clearfix colelem" id="pu847"><!-- group -->
      <div class="grpelem" id="u847"><!-- content -->
       <div class="fluid_height_spacer"></div>
      </div>
+     <img class="grpelem" id="u39247-4" alt="3D" src="images/u39247-4.png?crc=116229440" data-image-width="92"/><!-- rasterized frame -->
+     <img class="grpelem" id="u39250-6" alt="Print Modeling" src="images/u39250-6.png?crc=130563105" data-image-width="146"/><!-- rasterized frame -->
+     <img class="grpelem" id="u39253-4" alt="Krista.Konstantin" src="images/u39253-4.png?crc=267931284" data-image-width="688"/><!-- rasterized frame -->
+    </div>
+    <div class="clearfix colelem" id="pu1026"><!-- group -->
      <div class="grpelem" id="u1026"><!-- content -->
       <div class="fluid_height_spacer"></div>
      </div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="news.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="Главная" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u37715"><!-- vertical box -->
-       <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u37718" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box -->
-        <img class="MenuItemLabel NoWrap grpelem" id="u37719" alt="3D Печать" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
-       </div>
-       <div class="SubMenu MenuLevel1 clearfix" id="u37716"><!-- vertical box -->
-        <ul class="SubMenuView clearfix colelem" id="u37717"><!-- vertical box -->
-         <li class="MenuItemContainer clearfix colelem" id="u39577"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39579"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39583-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>Расчет стоимости печати</p></div></div></li>
-         <li class="MenuItemContainer clearfix colelem" id="u39643"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39646"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39649-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>ту</p></div></div></li>
-         <li class="MenuItemContainer clearfix colelem" id="u39622"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39625"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39628-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>ту</p></div></div></li>
-         <li class="MenuItemContainer clearfix colelem" id="u39601"><!-- horizontal box --><div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u39604"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u39607-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p>ру</p></div></div></li>
-        </ul>
-       </div>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="%d0%b1%d0%b5%d0%b7-%d0%b8%d0%bc%d0%b5%d0%bd%d0%b8-5.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="Главная" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1057" href="gallery.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="%d0%b1%d0%b5%d0%b7-%d0%b8%d0%bc%d0%b5%d0%bd%d0%b8-5.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u39206"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u39209" href="contacts.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="Контакты" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u39209" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="Контакты" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
      </nav>
-     <nav class="MenuBar clearfix grpelem" id="menuu1514"><!-- horizontal box -->
-      <div class="MenuItemContainer clearfix grpelem" id="u1515"><!-- vertical box -->
-       <div class="MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1518"><!-- horizontal box -->
-        <div class="MenuItemLabel NoWrap grpelem" id="u1521"><!-- state-based BG images -->
-         <img alt="Тут не могла быть реклама" src="images/blank.gif?crc=4208392903"/>
-         <div class="fluid_height_spacer"></div>
-        </div>
-       </div>
-      </div>
-     </nav>
-     <img class="grpelem" id="u39247-4" alt="3D" src="images/u39247-4.png?crc=116229440" data-image-width="92"/><!-- rasterized frame -->
-     <img class="grpelem" id="u39250-6" alt="Print Modeling" src="images/u39250-6.png?crc=130563105" data-image-width="146"/><!-- rasterized frame -->
-     <img class="grpelem" id="u39253-4" alt="Krista.Konstantin" src="images/u39253-4.png?crc=267931284" data-image-width="688"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem" id="pu39525"><!-- group -->
      <div class="grpelem" id="u39525"><!-- content -->
@@ -110,14 +86,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="preload_images">
    <img class="preload" src="images/u1047-r.png?crc=4241377526" alt=""/>
    <img class="preload" src="images/u1047-a.png?crc=419764504" alt=""/>
-   <img class="preload" src="images/u37719-r.png?crc=3913143181" alt=""/>
-   <img class="preload" src="images/u37719-a.png?crc=4069526000" alt=""/>
    <img class="preload" src="images/u1060-r.png?crc=59733261" alt=""/>
    <img class="preload" src="images/u1060-a.png?crc=285188805" alt=""/>
    <img class="preload" src="images/u39211-r.png?crc=3987860149" alt=""/>
    <img class="preload" src="images/u39211-a.png?crc=101900245" alt=""/>
-   <img class="preload" src="images/u1521-r.png?crc=3769757086" alt=""/>
-   <img class="preload" src="images/u1521-a.png?crc=4169524434" alt=""/>
    <img class="preload" src="images/u39286_states-r.png?crc=307132591" alt=""/>
    <img class="preload" src="images/u38434-r.png?crc=3761072987" alt=""/>
   </div>
