--- a/без-имени-5.html
+++ b/без-имени-5.html
@@ -10,15 +10,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "___-_____-5.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=310882137"/>
-  <title>Contacts</title>
+  <title>Без имени 5</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3981835437"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=534547425" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/___-_____-5.css?crc=409021655" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -38,31 +38,23 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u1026"><!-- content --></div>
      <nav class="MenuBar clearfix grpelem" id="menuu1027"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1042"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1045" href="%d0%b1%d0%b5%d0%b7-%d0%b8%d0%bc%d0%b5%d0%bd%d0%b8-5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="Главная" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1045" href="%d0%b1%d0%b5%d0%b7-%d0%b8%d0%bc%d0%b5%d0%bd%d0%b8-5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1047" alt="Главная" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1056"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1057" href="%d0%b1%d0%b5%d0%b7-%d0%b8%d0%bc%d0%b5%d0%bd%d0%b8-5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1057" href="%d0%b1%d0%b5%d0%b7-%d0%b8%d0%bc%d0%b5%d0%bd%d0%b8-5.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u1060" alt="Галерея" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u39206"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u39209" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="Контакты" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u39209" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u39211" alt="Контакты" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images --></a>
       </div>
      </nav>
     </div>
-    <div class="clearfix colelem" id="pu39083-4"><!-- group -->
-     <img class="grpelem" id="u39083-4" alt="E-mail" width="84" height="44" src="images/u39083-4.png?crc=4283756679"/><!-- rasterized frame -->
-     <a class="nonblock nontext grpelem" id="u39185" href="mailto:konstantin.krista@gmail.com"><!-- state-based BG images --><img id="u39185_states" alt="konstantin.krista@gmail.com" src="images/blank.gif?crc=4208392903"/></a>
-    </div>
-    <div class="clearfix colelem" id="ppu39265-4"><!-- group -->
-     <div class="clearfix grpelem" id="pu39265-4"><!-- group -->
-      <img class="grpelem" id="u39265-4" alt="thingiverse.com" width="156" height="44" src="images/u39265-4.png?crc=473371155"/><!-- rasterized frame -->
-      <a class="nonblock nontext clearfix grpelem" id="u39277-4" href="https://www.thingiverse.com/krista_konstantin/designs" target="_blank"><!-- content --><p>+</p></a>
+    <div class="clearfix colelem" id="pu39915"><!-- group -->
+     <div class="clip_frame grpelem" id="u39915"><!-- image -->
+      <img class="block" id="u39915_img" src="images/%d0%b2%d1%81%d1%82%d0%b0%d0%b2%d0%bb%d0%b5%d0%bd%d0%bd%d0%be%d0%b5%20%d0%b8%d0%b7%d0%be%d0%b1%d1%80%d0%b0%d0%b6%d0%b5%d0%bd%d0%b8%d0%b5%20640x860.jpg?crc=482130639" alt="" width="380" height="511"/>
      </div>
-     <a class="nonblock nontext clearfix grpelem" id="u39197-4" href="https://vk.com/krista.konstantin" target="_blank"><!-- content --><p>+</p></a>
-     <img class="grpelem" id="u39233-4" alt="BK" width="84" height="44" src="images/u39233-4.png?crc=4264108762"/><!-- rasterized frame -->
-     <img class="grpelem" id="u39274-4" alt="telegram" width="107" height="44" src="images/u39274-4.png?crc=4180632695"/><!-- rasterized frame -->
-     <a class="nonblock nontext clearfix grpelem" id="u39280-4" href="https://t.me/Krista_Konstantin" target="_blank"><!-- content --><p>+</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u39934-4" href="https://vk.com/krista.konstantin"><!-- content --><p>ВЫЙТИ</p></a>
     </div>
-    <div class="verticalspacer" data-offset-top="327" data-content-above-spacer="326" data-content-below-spacer="173"></div>
+    <div class="verticalspacer" data-offset-top="741" data-content-above-spacer="740" data-content-below-spacer="80"></div>
    </div>
   </div>
   <div class="preload_images">
@@ -72,7 +64,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u1060-a.png?crc=285188805" alt=""/>
    <img class="preload" src="images/u39211-r.png?crc=3987860149" alt=""/>
    <img class="preload" src="images/u39211-a.png?crc=101900245" alt=""/>
-   <img class="preload" src="images/u39185_states-r.png?crc=4116206364" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
