--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3981835437"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=73853381" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=14919863" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -66,7 +66,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <img class="grpelem" id="u39274-4" alt="telegram" width="107" height="44" src="images/u39274-4.png?crc=4180632695"/><!-- rasterized frame -->
      <a class="nonblock nontext clearfix grpelem" id="u39280-4" href="https://t.me/Krista_Konstantin" target="_blank"><!-- content --><p>+</p></a>
     </div>
-    <div class="verticalspacer" data-offset-top="327" data-content-above-spacer="326" data-content-below-spacer="173"></div>
+    <div class="clip_frame clearfix colelem" id="u39955"><!-- image -->
+     <img class="position_content" id="u39955_img" src="images/%d0%b2%d1%81%d1%82%d0%b0%d0%b2%d0%bb%d0%b5%d0%bd%d0%bd%d0%be%d0%b5%20%d0%b8%d0%b7%d0%be%d0%b1%d1%80%d0%b0%d0%b6%d0%b5%d0%bd%d0%b8%d0%b5%20998x463.jpg?crc=3843319811" alt="" width="302" height="140"/>
+    </div>
+    <div class="verticalspacer" data-offset-top="470" data-content-above-spacer="469" data-content-below-spacer="80"></div>
    </div>
   </div>
   <div class="preload_images">
