--- a/без-имени-5.html
+++ b/без-имени-5.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Без имени 5</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=247378982"/>
-  <link rel="stylesheet" type="text/css" href="css/___-_____-5.css?crc=458519267" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=245567060"/>
+  <link rel="stylesheet" type="text/css" href="css/___-_____-5.css?crc=3848012542" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -32,6 +32,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u847"><!-- content --></div>
      <img class="grpelem" id="u39247-4" alt="3D" width="92" height="131" src="images/u39247-4.png?crc=116229440"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" width="146" height="115" src="images/u39250-6.png?crc=130563105"/><!-- rasterized frame -->
+     <div class="clearfix grpelem" id="u40140-4"><!-- content -->
+      <p id="u40140-2">Konstantin aka Panelka</p>
+     </div>
     </div>
     <div class="clearfix colelem" id="pu1026"><!-- group -->
      <div class="grpelem" id="u1026"><!-- content --></div>
