--- a/contacts-копия.html
+++ b/contacts-копия.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contacts копия</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=247378982"/>
-  <link rel="stylesheet" type="text/css" href="css/contacts-_____.css?crc=4163022367" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=245567060"/>
+  <link rel="stylesheet" type="text/css" href="css/contacts-_____.css?crc=4268991045" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -32,6 +32,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u847"><!-- content --></div>
      <img class="grpelem" id="u39247-4" alt="3D" width="92" height="131" src="images/u39247-4.png?crc=116229440"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" width="146" height="115" src="images/u39250-6.png?crc=130563105"/><!-- rasterized frame -->
+     <div class="clearfix grpelem" id="u40140-4"><!-- content -->
+      <p id="u40140-2">Konstantin aka Panelka</p>
+     </div>
     </div>
     <div class="clearfix colelem" id="pu1026"><!-- group -->
      <div class="grpelem" id="u1026"><!-- content --></div>
@@ -50,8 +53,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix colelem" id="ppu40115"><!-- group -->
      <div class="clearfix grpelem" id="pu40115"><!-- group -->
       <div class="grpelem" id="u40115"><!-- content --></div>
-      <div class="clip_frame clearfix grpelem" id="u40121"><!-- image -->
-       <img class="position_content" id="u40121_img" src="images/img_20210203_2027233-crop-u40121.jpg?crc=4007867039" alt="" width="476" height="98"/>
+      <div class="clip_frame grpelem" id="u40121"><!-- image -->
+       <img class="block" id="u40121_img" src="images/img_20210203_2027233-crop-u40121.jpg?crc=3848585823" alt="" width="476" height="97"/>
       </div>
       <img class="grpelem" id="u40128" alt="Вывеска с RGB подсветкой для студии маникюра &quot;maria nail&quot;" src="images/blank.gif?crc=4208392903"/><!-- state-based BG images -->
      </div>
