--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contacts</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=247378982"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4052527552" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=245567060"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3880447541" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -32,6 +32,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u847"><!-- content --></div>
      <img class="grpelem" id="u39247-4" alt="3D" width="92" height="131" src="images/u39247-4.png?crc=116229440"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" width="146" height="115" src="images/u39250-6.png?crc=130563105"/><!-- rasterized frame -->
+     <div class="clearfix grpelem" id="u40140-4"><!-- content -->
+      <p id="u40140-2">Konstantin aka Panelka</p>
+     </div>
     </div>
     <div class="clearfix colelem" id="pu1026"><!-- group -->
      <div class="grpelem" id="u1026"><!-- content --></div>
@@ -49,17 +52,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix colelem" id="pu39083-4"><!-- group -->
      <img class="grpelem" id="u39083-4" alt="E-mail" width="84" height="44" src="images/u39083-4.png?crc=4283756679"/><!-- rasterized frame -->
-     <a class="nonblock nontext grpelem" id="u39185" href="mailto:konstantin.krista@gmail.com"><!-- state-based BG images --><img id="u39185_states" alt="konstantin.krista@gmail.com" src="images/blank.gif?crc=4208392903"/></a>
+     <a class="nonblock nontext grpelem" id="u39185" href="mailto:konstantin.panelka@gmail.com"><!-- state-based BG images --><img id="u39185_states" alt="konstantin.panelka@gmail.com" src="images/blank.gif?crc=4208392903"/></a>
     </div>
     <div class="clearfix colelem" id="ppu39265-4"><!-- group -->
      <div class="clearfix grpelem" id="pu39265-4"><!-- group -->
       <img class="grpelem" id="u39265-4" alt="thingiverse.com" width="156" height="44" src="images/u39265-4.png?crc=473371155"/><!-- rasterized frame -->
-      <a class="nonblock nontext clearfix grpelem" id="u39277-4" href="https://www.thingiverse.com/krista_konstantin/designs" target="_blank"><!-- content --><p>+</p></a>
+      <a class="nonblock nontext clearfix grpelem" id="u39277-4" href="https://www.thingiverse.com/panelka/designs" target="_blank"><!-- content --><p>+</p></a>
      </div>
-     <a class="nonblock nontext clearfix grpelem" id="u39197-4" href="https://vk.com/krista.konstantin" target="_blank"><!-- content --><p>+</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u39197-4" href="https://vk.com/konstantin.panelka" target="_blank"><!-- content --><p>+</p></a>
      <img class="grpelem" id="u39233-4" alt="BK" width="84" height="44" src="images/u39233-4.png?crc=4264108762"/><!-- rasterized frame -->
      <img class="grpelem" id="u39274-4" alt="telegram" width="107" height="44" src="images/u39274-4.png?crc=4180632695"/><!-- rasterized frame -->
-     <a class="nonblock nontext clearfix grpelem" id="u39280-4" href="https://t.me/Krista_Konstantin" target="_blank"><!-- content --><p>+</p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u39280-4" href="https://t.me/Konstantin_Panelka" target="_blank"><!-- content --><p>+</p></a>
     </div>
     <div class="verticalspacer" data-offset-top="327" data-content-above-spacer="326" data-content-below-spacer="173"></div>
    </div>
@@ -71,7 +74,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u1060-a.png?crc=285188805" alt=""/>
    <img class="preload" src="images/u39211-r.png?crc=3987860149" alt=""/>
    <img class="preload" src="images/u39211-a.png?crc=101900245" alt=""/>
-   <img class="preload" src="images/u39185_states-r.png?crc=4116206364" alt=""/>
+   <img class="preload" src="images/u39185_states-r.png?crc=3839991760" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
