--- a/news.html
+++ b/news.html
@@ -18,8 +18,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>News</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=245567060"/>
-  <link rel="stylesheet" type="text/css" href="css/news.css?crc=4134528015" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3765961626"/>
+  <link rel="stylesheet" type="text/css" href="css/news.css?crc=3835818803" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -35,9 +35,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <img class="grpelem" id="u39247-4" alt="3D" src="images/u39247-4.png?crc=116229440" data-image-width="92"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" src="images/u39250-6.png?crc=130563105" data-image-width="146"/><!-- rasterized frame -->
-     <div class="clearfix grpelem" id="u40140-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-      <p id="u40140-2">Konstantin aka Panelka</p>
-     </div>
+     <img class="grpelem" id="u40140-4" alt="Konstantin aka Panelka" src="images/u40140-4.png?crc=520999358" data-image-width="692"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem" id="pu1026"><!-- group -->
      <div class="grpelem" id="u1026"><!-- content -->
