--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Contacts</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=245567060"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3880447541" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3765961626"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4142464926" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -32,9 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="grpelem" id="u847"><!-- content --></div>
      <img class="grpelem" id="u39247-4" alt="3D" width="92" height="131" src="images/u39247-4.png?crc=116229440"/><!-- rasterized frame -->
      <img class="grpelem" id="u39250-6" alt="Print Modeling" width="146" height="115" src="images/u39250-6.png?crc=130563105"/><!-- rasterized frame -->
-     <div class="clearfix grpelem" id="u40140-4"><!-- content -->
-      <p id="u40140-2">Konstantin aka Panelka</p>
-     </div>
+     <img class="grpelem" id="u40140-4" alt="Konstantin aka Panelka" width="692" height="129" src="images/u40140-4.png?crc=520999358"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem" id="pu1026"><!-- group -->
      <div class="grpelem" id="u1026"><!-- content --></div>
