--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_______-______.css?crc=3765961626"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=107862396" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=393574996" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -62,7 +62,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <img class="grpelem" id="u39274-4" alt="telegram" width="107" height="44" src="images/u39274-4.png?crc=4180632695"/><!-- rasterized frame -->
      <a class="nonblock nontext clearfix grpelem" id="u39280-4" href="https://t.me/Konstantin_Panelka" target="_blank"><!-- content --><p>+</p></a>
     </div>
-    <div class="verticalspacer" data-offset-top="327" data-content-above-spacer="326" data-content-below-spacer="173"></div>
+    <div class="clip_frame colelem" id="u40340"><!-- image -->
+     <img class="block" id="u40340_img" src="images/1untitled.gif?crc=531442568" alt="" width="86" height="201"/>
+    </div>
+    <div class="verticalspacer" data-offset-top="630" data-content-above-spacer="629" data-content-below-spacer="80"></div>
    </div>
   </div>
   <div class="preload_images">
